# One-Capital-Replit

./: CURRENT_PROGRESS_STATUS.md  Cargo.toml  README.md  TESTING_CHECKLIST.md  cookies.txt  package-lock.json  package.json  run.sh  vite.config.ts
.github/workflows/: build-test.yml
attached_assets/: Pasted-Create-a-React-based-dashboard-page-for-a-decentralized-application-dApp-named-One-Capital-Auto-I-1746784796187.txt  Pasted-Replit-AI-Agent-Prompt-One-Capital-Price-Feeds-Oracle-Services-and-Cross-Chain-Swap-Integration-1746834637514.txt  Pasted-Replit-AI-Agent-Prompt-One-Capital-dApp-Post-Contract-Tooling-QA-and-Testing-I-ve-completed-the-1746833951147.txt  Pasted-Replit-AI-Agent-Prompt-One-Capital-dApp-Wallet-Integration-Real-Time-Prices-and-Portfolio-Displ-1746840254713.txt  Pasted-Replit-AI-Prompt-Create-a-decentralized-application-dApp-named-One-Capital-Auto-Investing-for-t-1746780662792.txt  Pasted-v1-1-Latest-XTalk-Protocol-High-Level-System-Overview-Introduction-The-L1X-XTalk-Protocol-enables-1747164943698.txt
client/: index.html
client/src/: App.tsx
rust-contracts/: Cargo.toml  README.md  build.rs  deploy.sh  minimal.rs
rust-contracts/src/: lib.rs  price_oracle.rs  scheduled_jobs.rs  x_swap.rs
rust-contracts/src/allocation/: mod.rs
rust-contracts/src/api/: mod.rs  rebalance_endpoint.rs
rust-contracts/src/cross_chain/: mod.rs
rust-contracts/src/custodial_vault/: mod.rs
rust-contracts/src/events/: mod.rs
rust-contracts/src/non_custodial_vault/: mod.rs
rust-contracts/src/portfolio/: mod.rs
rust-contracts/src/price_feed/: mod.rs
rust-contracts/src/rebalance/: mod.rs  scheduled.rs
rust-contracts/src/take_profit/: mod.rs
rust-contracts/src/tests/: mod.rs  rebalance_tests.rs
rust-contracts/src/wallet/: mod.rs
rust-contracts/src/xtalk/: mod.rs
server/: index.ts  routes.ts  storage.ts
server/scripts/: schedule-rebalance.js  schedule-rebalance.ts
server/services/: contractRebalance.ts  crossChainSwap.ts  priceFeed.ts  walletIntegration.ts
shared/: schema.ts
temp/: CurrentHoldings.tsx
testing/: run-tests.sh
(+64 files in other folders)
