[package]
name = "one-capital-l1x"
version = "0.1.0"
edition = "2021"
authors = ["Andrew-L1x"]
description = "One Capital Auto-Investing smart contracts for L1X blockchain"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
l1x-sdk = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"

# Dev dependencies for testing
[dev-dependencies]
wasm-bindgen-test = "0.3.0"

# Enable optimizations in release mode
[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable link-time optimization
codegen-units = 1
