[package]
name = "l1x-contract"
version = "0.1.0"
edition = "2021"
authors = ["The L1X Project Developers"]
license = "Apache-2.0"
description = """
L1X example contact
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = "=0.9.3"
l1x-sdk = "=0.3.1"
serde = { version = "1", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
