[package]
name = "one-capital-contracts"
version = "0.1.0"
edition = "2021"
authors = ["One Capital Team"]
license = "Apache-2.0"
description = """
One Capital Auto-Investing smart contracts for L1X blockchain
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = "=0.9.3"
l1x-sdk = "=0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
